--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-	<head>
-		<title>Landing Page</title>
-	</head>
-	<body>
+<head>
+	<title>Landing Page</title>
+</head>
+<body>
   Prueba
-	</body>
+	<video src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" controls></video>
+</body>
 </html>
