--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<title>Landing Page</title>
 </head>
 <body>
-  Prueba
-	<video src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" controls></video>
+	<h1>Probando video</h1>
+ <div class="video-container">
+  <iframe width="560" height="315" src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" ></iframe>
+</div>
 </body>
 </html>
