--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 </head>
 <body>
 	<h1>Probando video</h1>
- <div class="video-container">
-  <iframe width="560" height="315" src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" ></iframe>
-</div>
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
