--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Landing Page</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Landin Page</title>
+	<link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-	<h1>Probando video</h1>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/mCdA4bJAGGk?si=kpnotl2UxAe_QFhj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	
 </body>
 </html>
