Inserción imagenes y correción css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
 	<link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-	
+	<div class="container">
+		<div class="box">
+			<img src="Assets/Elden.jpg" alt="">
+		</div>
+		<div class="box">
+			<img src="Assets/GTAv.jpg" alt="">
+		</div>
+		<div class="box">
+			<img src="Assets/Half-life.jpg" alt="">
+		</div>
+		<div class="box">
+			<img src="Assets/LegendZelda.jpg" alt="">
+		</div>
+		<div class="box">
+			<img src="Assets/Persona5.jpg" alt="">
+		</div>
+		<div class="box">
+			<img src="Assets/RedDead.jpg" alt="">
+		</div>
+		<div class="box">
+			<img src="Assets/Thelast.jpg" alt="">
+		</div>
+	</div>
 </body>
 </html>
