--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 	<link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
+
+<h2>Slider </h2>
+
+<div class="slider-frame">
+	<ul>
+		<li><img src="Assets/Elden.jpg" alt=""></li>
+		<li><img src="Assets/GTAv.jpg" alt=""></li>
+		<li><img src="Assets/RedDead.jpg" alt=""></li>
+		<li><img src="Assets/Thelast.jpg" alt=""></li>
+	</ul>
+</div>
+
 	<div class="container">
 		<div class="box">
 			<img src="Assets/Elden.jpg" alt="">
