--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 </head>
 <body>
 
+	<header>
+		<div class="logo">
+			<h2 class="name">
+				Best games 2024
+			</h2>
+		</div>
+		<nav>
+			<a href="" class="nav-link">Start</a>
+			<a href="" class="nav-link">Image gallery</a>
+			<a href="" class="nav-link">Form</a>
+			<a href="" class="nav-link">Contacts</a>
+		</nav>
+	</header>
+
 <h2>Slider </h2>
 
 <div class="slider-frame">
