--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 		</nav>
 	</header>
 
+	<div class="redes">
+		<a href="https://wa.me/987654321?text=Best%20game%202024%" target="_blank">
+			<img class="boton" src="Assets/whatsapp-icon.png" alt="">
+		</a>
+	</div>
+
 <h2>Slider </h2>
 
 <div class="slider-frame">
