--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 	</ul>
 </div>
 
+<div class="text-slider">
+	<p>
+		Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus sint <br>
+		in illum corrupti qui consequatur sed perspiciatis, quisquam perferendis <br>
+		nostrum esse assumenda quaerat repellat, ad est, aut delectus repudiandae <br>
+		earum.
+	</p>
+</div>
+
 	<div class="container">
 		<div class="box">
 			<img src="Assets/Elden.jpg" alt="">
@@ -62,6 +71,21 @@
 			<img src="Assets/Thelast.jpg" alt="">
 		</div>
 	</div>
+
+	<div class="container-yt">
+		<div class="video-yt">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/S_OXuArbZNY?si=KunstB4qRkR8bh9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+			</iframe> 
+				<div class="text-yt">
+					<h1>Video</h1>
+				</div>
+				<div class="text-box-yt">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati molestiae nam reprehenderit minus veniam expedita? Iusto sint, incidunt vel nesciunt, <br> eveniet tempora facere magni ab ducimus unde dignissimos, officia aliquid.</p>
+				</div>
+		</div>
+	</div>
+
+
 		<div class="form">
 			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSenRzXebstUQriG6Nr9zIMA61Frvq08lI4IbbJ7hy0n6TIdtg/viewform?embedded=true" width="640" height="1218" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 		</div>
