Correción text-box y video

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<header>
 		<div class="logo">
 			<h2 class="name">
-				Best games 2024
+				BG Besto gamesy 2024
 			</h2>
 		</div>
 		<nav>
@@ -41,13 +41,15 @@
 
 <div class="text-slider">
 	<p>
-		Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus sint <br>
-		in illum corrupti qui consequatur sed perspiciatis, quisquam perferendis <br>
-		nostrum esse assumenda quaerat repellat, ad est, aut delectus repudiandae <br>
-		earum.
+		En esta página encontraras unos de los mejores videojuegos actualmente del <br>
+		año 2024, ya sean por el modo de juego, sus animaciones, el rendimiento, la <br>
+		experiencia del usuario, calidad grafica, sombras, texturas, etc. Nominados <br>
+		por la comunidad. <br>
 	</p>
 </div>
-
+<div class="tittle-gallery">
+	<h1>Galeria de imagenes</h1>
+</div>
 	<div class="container">
 		<div class="box">
 			<img src="Assets/Elden.jpg" alt="">
@@ -80,7 +82,9 @@
 					<h1>Video</h1>
 				</div>
 				<div class="text-box-yt">
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati molestiae nam reprehenderit minus veniam expedita? Iusto sint, incidunt vel nesciunt, <br> eveniet tempora facere magni ab ducimus unde dignissimos, officia aliquid.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati molestiae <br>nam reprehenderit minus veniam expedita? Iusto sint, incidunt vel nesciunt, <br> eveniet tempora facere magni ab ducimus unde dignissimos, officia aliquid. <br>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus illum ea quasi <br>recusandae amet nostrum nemo ducimus vel omnis assumenda dolorum iste ut quia <br> eveniet pariatur exercitationem odit, hic fugiat.
+					</p>
 				</div>
 		</div>
 	</div>
