Correción text-box y video mejorado

--- a/index.html
+++ b/index.html
@@ -75,18 +75,20 @@
 	</div>
 
 	<div class="container-yt">
-		<div class="video-yt">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/S_OXuArbZNY?si=KunstB4qRkR8bh9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
 			</iframe> 
-				<div class="text-yt">
-					<h1>Video</h1>
-				</div>
 				<div class="text-box-yt">
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati molestiae <br>nam reprehenderit minus veniam expedita? Iusto sint, incidunt vel nesciunt, <br> eveniet tempora facere magni ab ducimus unde dignissimos, officia aliquid. <br>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus illum ea quasi <br>recusandae amet nostrum nemo ducimus vel omnis assumenda dolorum iste ut quia <br> eveniet pariatur exercitationem odit, hic fugiat.
+					<h1>Video</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+						Obcaecati molestiae nam reprehenderit minus veniam expedita?<br>
+						Iusto sint, incidunt vel nesciunt, eveniet tempora facere <br>
+						magni ab ducimus unde dignissimos, officia aliquid. Lorem <br>
+						ipsum dolor, sit amet consectetur adipisicing elit. Doloribus <br>
+						illum ea quasi recusandae amet nostrum nemo ducimus vel omnis <br> 
+						assumenda dolorum isteut quia eveniet pariatur exercitationem <br>
+						odit, hic fugiat. <br>
 					</p>
 				</div>
-		</div>
 	</div>
 
 
