--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Landin Page</title>
 	<link rel="stylesheet" href="CSS/style.css">
 </head>
+
 <body>
 
 	<header>
@@ -28,28 +30,28 @@
 		</a>
 	</div>
 
-<h2>Slider </h2>
+	<h2>Slider </h2>
 
-<div class="slider-frame">
-	<ul>
-		<li><img src="Assets/Elden.jpg" alt=""></li>
-		<li><img src="Assets/GTAv.jpg" alt=""></li>
-		<li><img src="Assets/RedDead.jpg" alt=""></li>
-		<li><img src="Assets/Thelast.jpg" alt=""></li>
-	</ul>
-</div>
+	<div class="slider-frame">
+		<ul>
+			<li><img src="Assets/Elden.jpg" alt=""></li>
+			<li><img src="Assets/GTAv.jpg" alt=""></li>
+			<li><img src="Assets/RedDead.jpg" alt=""></li>
+			<li><img src="Assets/Thelast.jpg" alt=""></li>
+		</ul>
+	</div>
 
-<div class="text-slider">
-	<p>
-		En esta página encontraras unos de los mejores videojuegos actualmente del <br>
-		año 2024, ya sean por el modo de juego, sus animaciones, el rendimiento, la <br>
-		experiencia del usuario, calidad grafica, sombras, texturas, etc. Nominados <br>
-		por la comunidad. <br>
-	</p>
-</div>
-<div class="tittle-gallery">
-	<h1>Galeria de imagenes</h1>
-</div>
+	<div class="text-slider">
+		<p>
+			En esta página encontraras unos de los mejores videojuegos actualmente del <br>
+			año 2024, ya sean por el modo de juego, sus animaciones, el rendimiento, la <br>
+			experiencia del usuario, calidad grafica, sombras, texturas, etc. Nominados <br>
+			por la comunidad. <br>
+		</p>
+	</div>
+	<div class="tittle-gallery">
+		<h1>Galeria de imagenes</h1>
+	</div>
 	<div class="container">
 		<div class="box">
 			<img src="Assets/Elden.jpg" alt="">
@@ -75,25 +77,50 @@
 	</div>
 
 	<div class="container-yt">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/S_OXuArbZNY?si=KunstB4qRkR8bh9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-			</iframe> 
-				<div class="text-box-yt">
-					<h1>Video</h1>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-						Obcaecati molestiae nam reprehenderit minus veniam expedita?<br>
-						Iusto sint, incidunt vel nesciunt, eveniet tempora facere <br>
-						magni ab ducimus unde dignissimos, officia aliquid. Lorem <br>
-						ipsum dolor, sit amet consectetur adipisicing elit. Doloribus <br>
-						illum ea quasi recusandae amet nostrum nemo ducimus vel omnis <br> 
-						assumenda dolorum isteut quia eveniet pariatur exercitationem <br>
-						odit, hic fugiat. <br>
-					</p>
-				</div>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/S_OXuArbZNY?si=KunstB4qRkR8bh9E"
+			title="YouTube video player" frameborder="0"
+			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+			referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+		</iframe>
+		<div class="text-box-yt">
+			<h1>Video</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+				Obcaecati molestiae nam reprehenderit minus veniam expedita?<br>
+				Iusto sint, incidunt vel nesciunt, eveniet tempora facere <br>
+				magni ab ducimus unde dignissimos, officia aliquid. Lorem <br>
+				ipsum dolor, sit amet consectetur adipisicing elit. Doloribus <br>
+				illum ea quasi recusandae amet nostrum nemo ducimus vel omnis <br>
+				assumenda dolorum isteut quia eveniet pariatur exercitationem <br>
+				odit, hic fugiat. <br>
+			</p>
+		</div>
 	</div>
 
 
-		<div class="form">
-			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSenRzXebstUQriG6Nr9zIMA61Frvq08lI4IbbJ7hy0n6TIdtg/viewform?embedded=true" width="640" height="1218" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+	<div class="form">
+		<iframe
+			src="https://docs.google.com/forms/d/e/1FAIpQLSenRzXebstUQriG6Nr9zIMA61Frvq08lI4IbbJ7hy0n6TIdtg/viewform?embedded=true"
+			width="640" height="1218" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+	</div>
+
+	<footer class="footer">
+
+		<div class="container-footer">
+
+			<div class="footer-row">
+
+				<div class="footer-links">
+
+
+					
+				</div>
+
+			</div>
+
 		</div>
+
+	</footer>
+
 </body>
+
 </html>
