--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Landin Page</title>
 	<link rel="stylesheet" href="CSS/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 
 <body>
@@ -17,9 +18,9 @@
 			</h2>
 		</div>
 		<nav>
-			<a href="" class="nav-link">Start</a>
-			<a href="" class="nav-link">Image gallery</a>
-			<a href="" class="nav-link">Form</a>
+			<a href="#slider" class="nav-link">Slider</a>
+			<a href="#gallery" class="nav-link">Image gallery</a>
+			<a href="#formu" class="nav-link">Form</a>
 			<a href="" class="nav-link">Contacts</a>
 		</nav>
 	</header>
@@ -30,7 +31,7 @@
 		</a>
 	</div>
 
-	<h2>Slider </h2>
+	<h2 id="slider">Slider </h2>
 
 	<div class="slider-frame">
 		<ul>
@@ -49,7 +50,7 @@
 			por la comunidad. <br>
 		</p>
 	</div>
-	<div class="tittle-gallery">
+	<div class="tittle-gallery" id="gallery">
 		<h1>Galeria de imagenes</h1>
 	</div>
 	<div class="container">
@@ -97,28 +98,37 @@
 	</div>
 
 
-	<div class="form">
+	<div class="form" id="formu">
 		<iframe
 			src="https://docs.google.com/forms/d/e/1FAIpQLSenRzXebstUQriG6Nr9zIMA61Frvq08lI4IbbJ7hy0n6TIdtg/viewform?embedded=true"
 			width="640" height="1218" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 	</div>
 
 	<footer class="footer">
-
 		<div class="container-footer">
-
 			<div class="footer-row">
-
 				<div class="footer-links">
 
-
+					<h4>Company</h4>
+					<ul>
+						<li><a href="#">About Us</a></li>
+						<li><a href="#">Contact Us</a></li>
+						<li><a href="#">Privacy policy</a></li>
+					</ul>
 					
 				</div>
+				<div class="footer-links">
+					<h4>Follow us</h4>
+					<div class="social-link">
+						<a href="#"><i class="fab fa-facebook"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+						<a href="#"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-linkedin"></i></a>
 
+				</div>
+				</div>
 			</div>
-
 		</div>
-
 	</footer>
 
 </body>
