--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
 
 	<div class="text-slider">
 		<p>
-			En esta página encontraras unos de los mejores videojuegos actualmente del <br>
-			año 2024, ya sean por el modo de juego, sus animaciones, el rendimiento, la <br>
-			experiencia del usuario, calidad grafica, sombras, texturas, etc. Nominados <br>
-			por la comunidad. <br>
-		</p>
+			On this page, you will find some of the best video games of the year 2024, <br>
+			whether it's for their gameplay, animations, performance, user experience, <br>
+			graphic quality, shadows, textures, etc. Nominated by the community. <br>
 	</div>
 	<div class="tittle-gallery" id="gallery">
 		<h1>Galeria de imagenes</h1>
@@ -103,13 +101,14 @@
 			src="https://docs.google.com/forms/d/e/1FAIpQLSenRzXebstUQriG6Nr9zIMA61Frvq08lI4IbbJ7hy0n6TIdtg/viewform?embedded=true"
 			width="640" height="1218" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 	</div>
+	<br>
 
 	<footer class="footer">
 		<div class="container-footer">
 			<div class="footer-row">
 				<div class="footer-links">
 
-					<h4>Company</h4>
+					<h4>Information</h4>
 					<ul>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Contact Us</a></li>
