--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<nav>
 			<a href="#slider" class="nav-link">Slider</a>
 			<a href="#gallery" class="nav-link">Image gallery</a>
-			<a href="#formu" class="nav-link">Form</a>
+			<a href="form.html" class="nav-link">Form</a>
 			<a href="" class="nav-link">Contacts</a>
 		</nav>
 	</header>
@@ -95,12 +95,6 @@
 		</div>
 	</div>
 
-
-	<div class="form" id="formu">
-		<iframe
-			src="https://docs.google.com/forms/d/e/1FAIpQLSenRzXebstUQriG6Nr9zIMA61Frvq08lI4IbbJ7hy0n6TIdtg/viewform?embedded=true"
-			width="640" height="1218" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
-	</div>
 	<br>
 
 	<footer class="footer">
