--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 <body>
 
 	<header>
+		<select id="language-switch">
+			<option value="en">English</option>
+			<option value="es">Español</option>
+		</select>
+		
+		<h1 data-translate="welcome"></h1>
+		
+		<script src="script.js"></script>		
 		<div class="logo">
 			<h2 class="name">
 				BG Besto gamesy 2024
@@ -94,7 +102,11 @@
 			</p>
 		</div>
 	</div>
-
+	<div class="container gradient1">
+        <h1>Container 1</h1>
+    </div>
+    <div class="container gradient2">
+        <h1>Container 2</h1>
 	<br>
 
 	<footer class="footer">
