--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<a href="#slider" class="nav-link">Slider</a>
 			<a href="#gallery" class="nav-link">Image gallery</a>
 			<a href="form.html" class="nav-link">Form</a>
-			<a href="" class="nav-link">Contacts</a>
+			<a href="#contacto" class="nav-link">Contacts</a>
 		</nav>
 	</header>
 
@@ -116,7 +116,7 @@
 					</ul>
 					
 				</div>
-				<div class="footer-links">
+				<div class="footer-links" id="contacto">
 					<h4>Follow us</h4>
 					<div class="social-link">
 						<a href="#"><i class="fab fa-facebook"></i></a>
