--- a/index.html
+++ b/index.html
@@ -11,26 +11,36 @@
 
 <body>
     <header>
-        <select id="language-switch">
-            <option value="en">English</option>
-            <option value="es">Español</option>
-        </select>
 
-        <h1 data-translate="welcome"></h1>
+        <div class="logo">logo</div>
+        <div class="bars">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
 
-        <div class="logo">
-            <h2 class="name" data-translate="logo-text">BJ Besto juegos 2024</h2>
-        </div>
-        <div class="menu-icon">
-            <i class="fas fa-bars"></i>
-        </div>
-        <nav>
-            <a href="#slider" class="nav-link" data-translate="slider">Slider</a>
-            <a href="#gallery" class="nav-link" data-translate="image-gallery">Galería</a>
-            <a href="form.html" class="nav-link" data-translate="form">Formulario</a>
-            <a href="#contacto" class="nav-link" data-translate="contacts">Contáctanos</a>
+        <nav class="nav-bar">
+            <ul>
+                <li>
+                    <a href="#" class="active">Inicio</a>
+                </li>
+                <li>
+                    <a href="#gallery">Galeria</a>
+                </li>
+                <li>
+                    <a href="form.html">Formulario</a>
+                </li>
+                <li>
+                    <a href="#video">Video</a>
+                </li>
+                <li>
+                    <a href="#contacto">Contactanos</a>
+                </li>
+            </ul>
         </nav>
     </header>
+
+    <script src="/script.js"></script>
 
     <div class="redes">
         <a href="https://wa.me/987654321?text=Best%20game%202024%" target="_blank">
@@ -83,7 +93,7 @@
         </div>
     </div>
 
-    <div class="selector-img">
+    <div class="selector-img" id="selector">
         <h1>Selector de imagenes
         </h1>
     </div>
@@ -118,7 +128,7 @@
         }
     </script>
 
-    <div class="container-yt">
+    <div class="container-yt" id="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/S_OXuArbZNY?si=KunstB4qRkR8bh9E"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -148,7 +158,7 @@
         <div class="container-footer">
             <div class="footer-row">
                 <div class="footer-links">
-                    <h4 data-translate="information">Information</h4>
+                    <h4 data-translate="information">Información</h4>
                     <ul>
                         <li><a href="#" data-translate="about-us">Sobre nosotros</a></li>
                         <li><a href="#" data-translate="contact-us">Contactanos</a></li>
