pequeños ajustes titulos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
 
-        <div class="logo">logo</div>
+        <div class="logo">BJ Besto Juegos</div>
         <div class="bars">
             <div class="line"></div>
             <div class="line"></div>
@@ -22,7 +22,7 @@
         <nav class="nav-bar">
             <ul>
                 <li>
-                    <a href="#" class="active">Inicio</a>
+                    <a href="#slider" class="active">Slider</a>
                 </li>
                 <li>
                     <a href="#gallery">Galeria</a>
