--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
     </header>
 
     <script src="/script.js"></script>
+    <select id="language-switch">
+        <option value="en">English</option>
+        <option value="es">Español</option>
+    </select>
 
+    <h1 data-translate="welcome"></h1>
     <div class="redes">
         <a href="https://wa.me/987654321?text=Best%20game%202024%" target="_blank">
             <img class="boton" src="Assets/whatsapp-icon.png" alt="WhatsApp">
