--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title data-translate="title">Landing Page</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 
 <body>
@@ -148,10 +149,7 @@
                 títulos de 2024. Este año ha estado repleto de <br>
                 lanzamientos innovadores y aventuras inolvidables <br>
                 que nos han mantenido pegados a nuestras pantallas. <br>
-                Desde impresionantes gráficos de última generación <br>
-                hasta historias cautivadoras y mecánicas de juego <br>
-                revolucionarias, estos juegos han elevado el estándar <br>
-                de la industria.  <br>  
+
             </p>
         </div>
     </div>
