Ajustes contenedor-yt y responsive

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <header>
 
         <div class="logo">BJ Besto Juegos</div>
+        <select id="language-switch">
+            <option value="en">English</option>
+            <option value="es">Español</option>
+        </select>
         <div class="bars">
             <div class="line"></div>
             <div class="line"></div>
@@ -28,7 +32,7 @@
                 <li>
                     <a href="#gallery">Galeria</a>
                 </li>
-                <li>np
+                <li>
                     <a href="form.html">Formulario</a>
                 </li>
                 <li>
@@ -42,10 +46,7 @@
     </header>
 
     <script src="/script.js"></script>
-    <select id="language-switch">
-        <option value="en">English</option>
-        <option value="es">Español</option>
-    </select>
+
 
     <h1 data-translate="welcome"></h1>
     <div class="redes">
@@ -135,20 +136,16 @@
     </script>
 
     <div class="container-yt" id="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/S_OXuArbZNY?si=KunstB4qRkR8bh9E"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-        </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/S_OXuArbZNY?si=RZza6dhl8DOKQqML" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <div class="text-box-yt">
             <h1 data-translate="video-title">Video</h1>
             <p data-translate="video-description">
-                Hoy tenemos un video muy especial para ustedes. <br>
-                Vamos a adentrarnos en el emocionante mundo de los <br>
-                videojuegos y descubrir cuáles son los mejores <br>
-                títulos de 2024. Este año ha estado repleto de <br>
-                lanzamientos innovadores y aventuras inolvidables <br>
-                que nos han mantenido pegados a nuestras pantallas. <br>
+                Hoy tenemos un video muy especial para ustedes. 
+                Vamos a adentrarnos en el emocionante mundo de los 
+                videojuegos y descubrir cuáles son los mejores 
+                títulos de 2024. Este año ha estado repleto de 
+                lanzamientos innovadores y aventuras inolvidables 
+                que nos han mantenido pegados a nuestras pantallas. 
 
             </p>
         </div>
