--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
     <header>
 
         <div class="logo">BJ Besto Juegos</div>
-        <select id="language-switch">
-            <option value="en">English</option>
-            <option value="es">Español</option>
-        </select>
+        <button id="btn-en">English</button>
+        <button id="btn-es">Español</button>
         <div class="bars">
             <div class="line"></div>
             <div class="line"></div>
@@ -177,5 +175,9 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/node-polyglot/build/polyglot.min.js"></script>
+    <script src="script.js"></script>
+
 </body>
 </html>
