--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
 
         <div class="logo">BJ Besto Juegos</div>
-        <button id="btn-en">English</button>
-        <button id="btn-es">Español</button>
+        <button class="boton-en" id="btn-en">English</button>
+        <button class="boton-es" id="btn-es">Español</button>
         <div class="bars">
             <div class="line"></div>
             <div class="line"></div>
