--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </footer>
 
     <script src="https://unpkg.com/node-polyglot/build/polyglot.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/js/script.js"></script>
 
 </body>
 </html>
