Pequñoes ajustes login y borrar archivo stylus

--- a/regist.html
+++ b/regist.html
@@ -30,7 +30,7 @@
                     <input type="password" id="contrasena" name="contrasena" required>
                 </div>
                 <button type="submit">Registrarse</button>
-                <a href="login.html" class="register-link">Iniciar sesión</a>
+                <a href="index.html" class="register-link">Iniciar sesión</a>
             </form>
             <p id="mensajeExito" style="color: #00ff00; display: none; margin-top: 20px;">¡Registro exitoso! Redirigiendo al inicio de sesión...</p>
         </div>
@@ -51,7 +51,7 @@
             mensajeExito.style.display = 'block';
             setTimeout(function() {
                 window.location.href = 'login.html';
-            }, 1000);
+            }, 2000);
         });
     </script>
 </body>
